Word wrap fix
Fixed nowrap issue in Terra Dotta WYSIWYG

--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@
 
   .tableFilterWrap table td {
     border-bottom: none;
+    white-space: normal !important;
   }
 
   .tableFilterWrap tr {
